[bugfix] Another attempts to fix coverall & Sonar. This might even work